# xid

./: .dockerignore  .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  pyproject.toml  requirements-dev.txt  requirements.txt
auth/: .gitignore  Makefile.am  auth.proto  base64.cpp  base64.hpp  base64_tests.cpp  credentials.cpp  credentials.hpp  credentials_tests.cpp  time.cpp  time.hpp  time_tests.cpp
contrib/: Dockerfile  docker-compose.yml  xid.service
data/: Makefile.am
doc/: auth.md  game.md  light.md  rest.md  rpc.md
ejabberd/: .gitignore  Makefile.am  README.md  ejabberd_xidauth.py  mod_archive_contacts.erl  xidauth.py
ejabberd/docker/: Dockerfile  ejabberd_xidauth.sh  xidauth.sh
ejabberd/tests/: integration.py  namecoding.py
gametest/: Makefile.am  address_update.py  allow_wallet.py  auth.py  authwithwallet.py  getnamestate.py  light.py  rest.py  signer_update.py  xidtest.py
src/: .gitignore  Makefile.am  database.cpp  database.hpp  dbtest.cpp  dbtest.hpp  gamestatejson.cpp  gamestatejson.hpp  gamestatejson_tests.cpp  light.cpp  light.hpp  logic.cpp  logic.hpp  main-light.cpp  main-xid.cpp  main.cpp  moveprocessor.cpp  moveprocessor.hpp  moveprocessor_tests.cpp  nonstaterpc.cpp  nonstaterpc.hpp  rest.cpp  rest.hpp  rpcerrors.cpp  rpcerrors.hpp  schema.hpp  schema.sql  schema_head.cpp  schema_tail.cpp  schema_tests.cpp  test.cpp  testutils.cpp  testutils.hpp  xidrpcserver.cpp  xidrpcserver.hpp
src/rpc-stubs/: light.json  xaya-readonly.json  xaya-wallet.json  xid.json
xidauth/: Makefile.am  README.md  credentials.py  delegation.py
xidauth/abi/: XayaAccounts.json  XayaDelegation.json
xidauth/tests/: credentials.py  delegation.py
